fix: arranja wrap do texto

--- a/DEV/ProjetoSD/src/main/resources/static/index_url_styles.css
+++ b/DEV/ProjetoSD/src/main/resources/static/index_url_styles.css
@@ -11,3 +11,52 @@
     width: 300px;
     height: 30px;
 }
+
+.search-results-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    text-align: center;
+    z-index: 1;
+}
+
+.search-results-container a{
+    text-decoration: none;
+}
+
+.search-results-container ul{
+    list-style: none;
+}
+
+.search-results-container p{
+    font-family: "Roboto";
+    color: #000000;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.search-result{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    height: fit-content;
+    width: fit-content;
+    margin-bottom: 10px;
+    border-bottom: #000000;
+    border-width: 2px;
+}
+
+.search-result h1{
+    font-family: "Roboto";
+    color: #0aa3e5;
+    font-size: 25px;
+    margin-bottom: 0;
+}
+
+.search-result p{
+    font-family: "Roboto";
+    color: #000000;
+    margin-bottom: 0;
+    margin-top: 0;
+}
